--- a/TODO
+++ b/TODO
@@ -1,4 +1,9 @@
-errors prints
-handle the case of "\xF"
-handle \t in inital mode
-tests
+change casting - check that the acst is valid ---  DONE
+add Lbrace Rbrace flags to statements ---- DONE 
+enable explicit casting from byte to int ---- DONE
+relop - verifying that both are numerical types -- DONE
+update call type  return value -- DONE
+main function --- DONE
+check VOID in Formals + VarDecl
+check that string is only allowed when print() is in used
+check that IF / WHile get boll exp
