--- a/TODO
+++ b/TODO
@@ -5,5 +5,5 @@ relop - verifying that both are numerical types -- DONE
 update call type  return value -- DONE
 main function --- DONE
 check VOID in Formals + VarDecl --- DONE
-check that string is only allowed when print() is in used
-check that IF / WHile get boll exp
+check that string is only allowed when print() is in used --- DONE
+check that IF / WHile get boll exp -- DONE
