finised my tasks - and added a new task for me ab out 0 dvision by 0

--- a/TODO
+++ b/TODO
@@ -2,8 +2,9 @@
 יש לנו בעיה עם הפרמטרים של הפונקצייה, הם לא נכנסים בALLOCA כמו שרצינו
 
 
-adding p before values Nitush
-parameters of functions Nitayush
-to check if the return valus is void in function - remove assign to register - Nitayush
+adding p before values Nitush -- DONE
+parameters of functions Nitayush -- DONE
+to check if the return valus is void in function - remove assign to register - Nitayush -- DONE
 change the while - Shaychuck
 overview the next labels - Shay chuck
+checking divide by zero -- NITAY
