commented next label

--- a/TODO
+++ b/TODO
@@ -5,6 +5,6 @@
 adding p before values Nitush -- DONE
 parameters of functions Nitayush -- DONE
 to check if the return valus is void in function - remove assign to register - Nitayush -- DONE
-change the while - Shaychuck
-overview the next labels - Shay chuck
+change the while - Shaychuck -- PROBABLY
+overview the next labels - Shay chuck -- NO NEED
 checking divide by zero -- NITAY
